--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,11 +31,43 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.sabrentkaro.HomeActivity" />
-        <activity android:name="com.sabrentkaro.search.SearchActivity" />
-        <activity android:name="com.sabrentkaro.search.SearchResultsActivity" />
-        <activity android:name="com.sabrentkaro.search.ProductDetailsActivity" />
-        <activity android:name="com.sabrentkaro.login.LoginActivity" />
+        <activity
+            android:name="com.sabrentkaro.HomeActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.search.SearchActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.search.SearchResultsActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.search.ProductDetailsActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.login.LoginActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.login.RegisterActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.search.RentDatesActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.search.AddressDocumentsActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        
+        <activity
+            android:name="com.sabrentkaro.search.OrderDetailsActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
