--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,9 +63,12 @@
             android:name="com.sabrentkaro.search.AddressDocumentsActivity"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize" />
-        
         <activity
             android:name="com.sabrentkaro.search.OrderDetailsActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.sabrentkaro.postad.PostAdActivity"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize" />
     </application>
