--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:host="www.allrental.co.in" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.sabrentkaro.HomeActivity"
@@ -109,6 +119,9 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="search-engine"
+            android:resource="@xml/noindex" />
     </application>
 
 </manifest>
