--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.sabrentkaro.SplashActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:configChanges="screenSize|orientation|keyboardHidden"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,82 +47,82 @@
         </activity>
         <activity
             android:name="com.sabrentkaro.HomeActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.SearchActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.SearchResultsActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.ProductDetailsActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.login.LoginActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.login.RegisterActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.RentDatesActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.AddressDocumentsActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.OrderDetailsActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.postad.PostAdActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.postad.PostAdDocumentActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.postad.PostDatesActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.postad.PostAdPreview"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.WebActivity"
-            android:screenOrientation="portrait"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.PaymentActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.sabrentkaro.search.PayUMoneyActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
         <meta-data
