--- a/SRK/AndroidManifest.xml
+++ b/SRK/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <application
         android:name="com.sabrentkaro.InternalApp"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
